<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.umariana.danielerazo.imc.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sistema"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_peso"
        android:hint="@string/peso_kg"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estatura"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/et_peso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_estatura"
        android:hint="@string/Estatura_mts"
        android:inputType="numberDecimal"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/tv_resultado"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_help"
        android:id="@+id/imagen"
        android:scaleType="fitXY"
        android:layout_below="@+id/tv_resultado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />

    <Button
        android:text="@string/calcular_BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:background="@android:color/holo_blue_dark"
        android:onClick="calcular"
        style="@style/Widget.AppCompat.Button"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_below="@+id/et_estatura"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <Button
        android:text="@string/acerca_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acerca_de"
        android:onClick="acercade"
        android:layout_alignTop="@+id/button"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp" />

    <Button
        android:text="Historico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="historico"
        android:layout_alignBaseline="@+id/acerca_de"
        android:layout_alignBottom="@+id/acerca_de"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
